--- a/python/CTPP API Tests.ipynb
+++ b/python/CTPP API Tests.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# Set base URL for API\n",
-    "server = \"http://ctpp.macrosysrt.com/api\""
+    "server = \"https://ctppdata.transportation.org/api\""
    ]
   },
   {
